@@ -4,7 +4,6 @@ import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.headers.HeaderDocumentation.headerWithName;
 import static org.springframework.restdocs.headers.HeaderDocumentation.requestHeaders;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
@@ -26,8 +25,6 @@ import static woowacourse.helper.fixture.OrderFixture.getOrderDetailResponses;
 import static woowacourse.helper.restdocs.RestDocsUtils.getRequestPreprocessor;
 import static woowacourse.helper.restdocs.RestDocsUtils.getResponsePreprocessor;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -35,9 +32,6 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.ResultActions;
 import woowacourse.helper.restdocs.RestDocsTest;
-import woowacourse.shoppingcart.domain.Orders;
-import woowacourse.shoppingcart.domain.OrdersDetail;
-import woowacourse.shoppingcart.dto.OrderDetailResponse;
 import woowacourse.shoppingcart.dto.OrderRequest;
 import woowacourse.shoppingcart.dto.OrderResponse;
 
@@ -71,7 +65,7 @@ public class OrderControllerTest extends RestDocsTest {
 
     }
 
-    @DisplayName("사용자 이름과 주문 ID를 통해 단일 주문 내역을 조회하면, 단일 주문 내역을 받는다.")
+    @DisplayName("토큰과 주문 ID를 통해 단일 주문 내역을 조회하면, 단일 주문 내역을 받는다.")
     @Test
     void findOrder() throws Exception {
         final OrderResponse orderResponse = new OrderResponse(1L, getOrderDetailResponses());
@@ -100,35 +94,33 @@ public class OrderControllerTest extends RestDocsTest {
                 )));
     }
 
-    @DisplayName("사용자 이름을 통해 주문 내역 목록을 조회하면, 주문 내역 목록을 받는다.")
+    @DisplayName("토큰을 통해 주문 내역 목록을 조회하면, 주문 내역 목록을 받는다.")
     @Test
     void findOrders() throws Exception {
-        // given
-        final String customerName = "pobi";
-        final List<Orders> expected = Arrays.asList(
-                new Orders(1L, Collections.singletonList(
-                        new OrdersDetail(1L, 1_000, "banana", "imageUrl", 2))),
-                new Orders(2L, Collections.singletonList(
-                        new OrdersDetail(2L, 2_000, "apple", "imageUrl2", 4)))
-        );
+        final List<OrderResponse> orderResponses = List.of(new OrderResponse(1L, getOrderDetailResponses()),
+                new OrderResponse(2L, getOrderDetailResponses()));
+        given(jwtTokenProvider.getPayload(anyString())).willReturn("1");
+        given(jwtTokenProvider.validateToken(anyString())).willReturn(true);
+        given(orderService.findOrdersByMemberId(anyLong())).willReturn(orderResponses);
 
-
-        // when // then
-        mockMvc.perform(get("/api/customers/" + customerName + "/orders/")
-                ).andDo(print())
+        final ResultActions resultActions = mockMvc.perform(get("/api/members/me/orders")
+                        .header(HttpHeaders.AUTHORIZATION, BEARER + TOKEN))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].orderDetails[0].productId").value(1L))
-                .andExpect(jsonPath("$[0].orderDetails[0].price").value(1_000))
-                .andExpect(jsonPath("$[0].orderDetails[0].name").value("banana"))
-                .andExpect(jsonPath("$[0].orderDetails[0].imageUrl").value("imageUrl"))
-                .andExpect(jsonPath("$[0].orderDetails[0].quantity").value(2))
+                .andExpect(content().string(objectMapper.writeValueAsString(orderResponses)));
 
-                .andExpect(jsonPath("$[1].id").value(2L))
-                .andExpect(jsonPath("$[1].orderDetails[0].productId").value(2L))
-                .andExpect(jsonPath("$[1].orderDetails[0].price").value(2_000))
-                .andExpect(jsonPath("$[1].orderDetails[0].name").value("apple"))
-                .andExpect(jsonPath("$[1].orderDetails[0].imageUrl").value("imageUrl2"))
-                .andExpect(jsonPath("$[1].orderDetails[0].quantity").value(4));
+        resultActions.andDo(document("orders-get-all",
+                getResponsePreprocessor(),
+                requestHeaders(
+                        headerWithName(HttpHeaders.AUTHORIZATION).description("토큰")
+                ),
+                responseFields(
+                        fieldWithPath("[].id").type(NUMBER).description("주문 id"),
+                        fieldWithPath("[].orderDetails[].order_detail_id").type(NUMBER).description("주문 디테일 id"),
+                        fieldWithPath("[].orderDetails[].product_id").type(NUMBER).description("제품 id"),
+                        fieldWithPath("[].orderDetails[].name").type(STRING).description("제품 명"),
+                        fieldWithPath("[].orderDetails[].total_price").type(NUMBER).description("제품 총 가격"),
+                        fieldWithPath("[].orderDetails[].image_url").type(STRING).description("제품 이미지"),
+                        fieldWithPath("[].orderDetails[].quantity").type(NUMBER).description("제품 양")
+                )));
     }
 }
